--- a/web-hugo/webhook/hooks.json.example
+++ b/web-hugo/webhook/hooks.json.example
@@ -1,7 +1,7 @@
 [
   {
-    "id": "build-site",
-    "execute-command": "/etc/webhook/buildhugo.sh",
+    "id": "build",
+    "execute-command": "/etc/webhook/build.sh",
     "command-working-directory": "/tmp/build",
     "response-message": "I got the payload!",
     "response-headers": [
