--- a/liberation/webhook/hooks.json.example
+++ b/liberation/webhook/hooks.json.example
@@ -1,7 +1,7 @@
 [
   {
     "id": "build",
-    "execute-command": "/etc/webhook/buildhugo.sh",
+    "execute-command": "/etc/webhook/build.sh",
     "command-working-directory": "/tmp/build",
     "response-message": "I got the payload!",
     "response-headers": [
