--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - ./mailman/core:/opt/mailman/
     stop_grace_period: 30s
     depends_on:
-      - database
+      - mailman_db
     environment:
       - DATABASE_URL=mysql+pymysql:${MAILMAN_DB_PW}//mailman:@database/mailman
       - DATABASE_TYPE=mysql
@@ -73,10 +73,7 @@ services:
     image: maxking/mailman-web:latest
     restart: always
     depends_on:
-      - database
-    links:
-      - mailman-core:mailman-core
-      - database:database
+      - mailman-db
     volumes:
       - ./mailman/web:/opt/mailman-web-data
     environment:
