--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - ./mailman/core:/opt/mailman/
     stop_grace_period: 30s
     depends_on:
-      - mailman_db
+      - mailman-db
     environment:
       - DATABASE_URL=mysql+pymysql:${MAILMAN_DB_PW}//mailman:@database/mailman
       - DATABASE_TYPE=mysql
